y.output
Terminals unused in grammar

   CAPTION
   CAPTIONE
   IMGFIGCAPTION


Grammar

    0 $accept: doc_start $end

    1 doc_start: HTML content_head content_body HTMLE

    2 content_head: HEAD content_head content_title HEADE
    3             | text

    4 content_title: TITLE TEXT TITLEE

    5 content_body: BODY alltags BODYE

    6 alltags: alltags P alltags PE text
    7        | alltags CENTER alltags CENTERE text
    8        | alltags H1 alltags H1E text
    9        | alltags H2 alltags H2E text
   10        | alltags H3 alltags H3E text
   11        | alltags H4 alltags H4E text
   12        | alltags U alltags UE text
   13        | alltags B alltags BE text
   14        | alltags I alltags IE text
   15        | alltags EM alltags EME text
   16        | alltags TT alltags TTE text
   17        | alltags STRONG alltags STRONGE text
   18        | alltags SMALL alltags SMALLE text
   19        | alltags SUB alltags SUBE text
   20        | alltags SUP alltags SUPE text
   21        | alltags FONT SIZE alltags FONTE text
   22        | alltags a_tag text
   23        | alltags BR text
   24        | alltags BRS text
   25        | alltags DIV alltags DIVE text
   26        | alltags UL alltags ULE text
   27        | alltags LI alltags LIE text
   28        | alltags OL alltags OLE text
   29        | alltags DL alltags DLE text
   30        | alltags DT alltags DTE text
   31        | alltags DD alltags DDE text
   32        | alltags FIGURE alltags FIGUREE text
   33        | alltags FIGCAPTION alltags FIGCAPTIONE text
   34        | alltags img_tag text
   35        | alltags table_tag text
   36        | text

   37 a_tag: A a_attr alltags AE

   38 a_attr: a_attr HREF
   39       | a_attr ATITLE
   40       | %empty

   41 img_tag: IMG img_attr

   42 img_attr: img_attr IMGSRC
   43         | img_attr IMGWIDTH
   44         | img_attr IMGHEIGHT
   45         | %empty

   46 table_tag: TABLE table_data TABLEE

   47 table_data: table_data TR tr_data TRE
   48           | table_data BORDER
   49           | %empty

   50 tr_data: tr_data TH text THE
   51        | tr_data TD text TDE
   52        | %empty

   53 text: text TEXT
   54     | text GREEK
   55     | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
HTML (258) 1
HTMLE (259) 1
HEAD (260) 2
HEADE (261) 2
A (262) 37
BODY (263) 5
BODYE (264) 5
TITLE (265) 4
TITLEE (266) 4
FONT (267) 21
AE (268) 37
FONTE (269) 21
CENTER (270) 7
CENTERE (271) 7
BRS (272) 24
BR (273) 23
P (274) 6
PE (275) 6
H1 (276) 8
H1E (277) 8
H2 (278) 9
H2E (279) 9
H3 (280) 10
H3E (281) 10
H4 (282) 11
H4E (283) 11
UL (284) 26
ULE (285) 26
DL (286) 29
DLE (287) 29
DT (288) 30
DTE (289) 30
DD (290) 31
DDE (291) 31
DIV (292) 25
DIVE (293) 25
U (294) 12
UE (295) 12
B (296) 13
BE (297) 13
I (298) 14
IE (299) 14
EM (300) 15
EME (301) 15
TT (302) 16
TTE (303) 16
STRONG (304) 17
STRONGE (305) 17
SMALL (306) 18
SMALLE (307) 18
SUB (308) 19
SUBE (309) 19
SUP (310) 20
SUPE (311) 20
TABLE (312) 46
TABLEE (313) 46
CAPTION (314)
TH (315) 50
CAPTIONE (316)
THE (317) 50
TR (318) 47
TRE (319) 47
TD (320) 51
TDE (321) 51
LI (322) 27
LIE (323) 27
OL (324) 28
OLE (325) 28
IMG (326) 41
TEXT (327) 4 53
GREEK (328) 54
HREF (329) 38
SIZE (330) 21
IMGSRC (331) 42
IMGWIDTH (332) 43
IMGHEIGHT (333) 44
FIGURE (334) 32
FIGUREE (335) 32
FIGCAPTION (336) 33
FIGCAPTIONE (337) 33
BORDER (338) 48
ATITLE (339) 39
IMGFIGCAPTION (340)


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
doc_start (87)
    on left: 1, on right: 0
content_head (88)
    on left: 2 3, on right: 1 2
content_title (89)
    on left: 4, on right: 2
content_body (90)
    on left: 5, on right: 1
alltags (91)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28 29 30 31 32 33 34 35 36, on right: 5 6 7 8 9 10 11 12
    13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 37
a_tag (92)
    on left: 37, on right: 22
a_attr (93)
    on left: 38 39 40, on right: 37 38 39
img_tag (94)
    on left: 41, on right: 34
img_attr (95)
    on left: 42 43 44 45, on right: 41 42 43 44
table_tag (96)
    on left: 46, on right: 35
table_data (97)
    on left: 47 48 49, on right: 46 47 48
tr_data (98)
    on left: 50 51 52, on right: 47 50 51
text (99)
    on left: 53 54 55, on right: 3 6 7 8 9 10 11 12 13 14 15 16 17
    18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 50 51
    53 54


State 0

    0 $accept: . doc_start $end

    HTML  shift, and go to state 1

    doc_start  go to state 2


State 1

    1 doc_start: HTML . content_head content_body HTMLE

    HEAD  shift, and go to state 3

    $default  reduce using rule 55 (text)

    content_head  go to state 4
    text          go to state 5


State 2

    0 $accept: doc_start . $end

    $end  shift, and go to state 6


State 3

    2 content_head: HEAD . content_head content_title HEADE

    HEAD  shift, and go to state 3

    $default  reduce using rule 55 (text)

    content_head  go to state 7
    text          go to state 5


State 4

    1 doc_start: HTML content_head . content_body HTMLE

    BODY  shift, and go to state 8

    content_body  go to state 9


State 5

    3 content_head: text .
   53 text: text . TEXT
   54     | text . GREEK

    TEXT   shift, and go to state 10
    GREEK  shift, and go to state 11

    $default  reduce using rule 3 (content_head)


State 6

    0 $accept: doc_start $end .

    $default  accept


State 7

    2 content_head: HEAD content_head . content_title HEADE

    TITLE  shift, and go to state 12

    content_title  go to state 13


State 8

    5 content_body: BODY . alltags BODYE

    $default  reduce using rule 55 (text)

    alltags  go to state 14
    text     go to state 15


State 9

    1 doc_start: HTML content_head content_body . HTMLE

    HTMLE  shift, and go to state 16


State 10

   53 text: text TEXT .

    $default  reduce using rule 53 (text)


State 11

   54 text: text GREEK .

    $default  reduce using rule 54 (text)


State 12

    4 content_title: TITLE . TEXT TITLEE

    TEXT  shift, and go to state 17


State 13

    2 content_head: HEAD content_head content_title . HEADE

    HEADE  shift, and go to state 18


State 14

    5 content_body: BODY alltags . BODYE
    6 alltags: alltags . P alltags PE text
    7        | alltags . CENTER alltags CENTERE text
    8        | alltags . H1 alltags H1E text
    9        | alltags . H2 alltags H2E text
   10        | alltags . H3 alltags H3E text
   11        | alltags . H4 alltags H4E text
   12        | alltags . U alltags UE text
   13        | alltags . B alltags BE text
   14        | alltags . I alltags IE text
   15        | alltags . EM alltags EME text
   16        | alltags . TT alltags TTE text
   17        | alltags . STRONG alltags STRONGE text
   18        | alltags . SMALL alltags SMALLE text
   19        | alltags . SUB alltags SUBE text
   20        | alltags . SUP alltags SUPE text
   21        | alltags . FONT SIZE alltags FONTE text
   22        | alltags . a_tag text
   23        | alltags . BR text
   24        | alltags . BRS text
   25        | alltags . DIV alltags DIVE text
   26        | alltags . UL alltags ULE text
   27        | alltags . LI alltags LIE text
   28        | alltags . OL alltags OLE text
   29        | alltags . DL alltags DLE text
   30        | alltags . DT alltags DTE text
   31        | alltags . DD alltags DDE text
   32        | alltags . FIGURE alltags FIGUREE text
   33        | alltags . FIGCAPTION alltags FIGCAPTIONE text
   34        | alltags . img_tag text
   35        | alltags . table_tag text

    A           shift, and go to state 19
    BODYE       shift, and go to state 20
    FONT        shift, and go to state 21
    CENTER      shift, and go to state 22
    BRS         shift, and go to state 23
    BR          shift, and go to state 24
    P           shift, and go to state 25
    H1          shift, and go to state 26
    H2          shift, and go to state 27
    H3          shift, and go to state 28
    H4          shift, and go to state 29
    UL          shift, and go to state 30
    DL          shift, and go to state 31
    DT          shift, and go to state 32
    DD          shift, and go to state 33
    DIV         shift, and go to state 34
    U           shift, and go to state 35
    B           shift, and go to state 36
    I           shift, and go to state 37
    EM          shift, and go to state 38
    TT          shift, and go to state 39
    STRONG      shift, and go to state 40
    SMALL       shift, and go to state 41
    SUB         shift, and go to state 42
    SUP         shift, and go to state 43
    TABLE       shift, and go to state 44
    LI          shift, and go to state 45
    OL          shift, and go to state 46
    IMG         shift, and go to state 47
    FIGURE      shift, and go to state 48
    FIGCAPTION  shift, and go to state 49

    a_tag      go to state 50
    img_tag    go to state 51
    table_tag  go to state 52


State 15

   36 alltags: text .
   53 text: text . TEXT
   54     | text . GREEK

    TEXT   shift, and go to state 10
    GREEK  shift, and go to state 11

    $default  reduce using rule 36 (alltags)


State 16

    1 doc_start: HTML content_head content_body HTMLE .

    $default  reduce using rule 1 (doc_start)


State 17

    4 content_title: TITLE TEXT . TITLEE

    TITLEE  shift, and go to state 53


State 18

    2 content_head: HEAD content_head content_title HEADE .

    $default  reduce using rule 2 (content_head)


State 19

   37 a_tag: A . a_attr alltags AE

    $default  reduce using rule 40 (a_attr)

    a_attr  go to state 54


State 20

    5 content_body: BODY alltags BODYE .

    $default  reduce using rule 5 (content_body)


State 21

   21 alltags: alltags FONT . SIZE alltags FONTE text

    SIZE  shift, and go to state 55


State 22

    7 alltags: alltags CENTER . alltags CENTERE text

    $default  reduce using rule 55 (text)

    alltags  go to state 56
    text     go to state 15


State 23

   24 alltags: alltags BRS . text

    $default  reduce using rule 55 (text)

    text  go to state 57


State 24

   23 alltags: alltags BR . text

    $default  reduce using rule 55 (text)

    text  go to state 58


State 25

    6 alltags: alltags P . alltags PE text

    $default  reduce using rule 55 (text)

    alltags  go to state 59
    text     go to state 15


State 26

    8 alltags: alltags H1 . alltags H1E text

    $default  reduce using rule 55 (text)

    alltags  go to state 60
    text     go to state 15


State 27

    9 alltags: alltags H2 . alltags H2E text

    $default  reduce using rule 55 (text)

    alltags  go to state 61
    text     go to state 15


State 28

   10 alltags: alltags H3 . alltags H3E text

    $default  reduce using rule 55 (text)

    alltags  go to state 62
    text     go to state 15


State 29

   11 alltags: alltags H4 . alltags H4E text

    $default  reduce using rule 55 (text)

    alltags  go to state 63
    text     go to state 15


State 30

   26 alltags: alltags UL . alltags ULE text

    $default  reduce using rule 55 (text)

    alltags  go to state 64
    text     go to state 15


State 31

   29 alltags: alltags DL . alltags DLE text

    $default  reduce using rule 55 (text)

    alltags  go to state 65
    text     go to state 15


State 32

   30 alltags: alltags DT . alltags DTE text

    $default  reduce using rule 55 (text)

    alltags  go to state 66
    text     go to state 15


State 33

   31 alltags: alltags DD . alltags DDE text

    $default  reduce using rule 55 (text)

    alltags  go to state 67
    text     go to state 15


State 34

   25 alltags: alltags DIV . alltags DIVE text

    $default  reduce using rule 55 (text)

    alltags  go to state 68
    text     go to state 15


State 35

   12 alltags: alltags U . alltags UE text

    $default  reduce using rule 55 (text)

    alltags  go to state 69
    text     go to state 15


State 36

   13 alltags: alltags B . alltags BE text

    $default  reduce using rule 55 (text)

    alltags  go to state 70
    text     go to state 15


State 37

   14 alltags: alltags I . alltags IE text

    $default  reduce using rule 55 (text)

    alltags  go to state 71
    text     go to state 15


State 38

   15 alltags: alltags EM . alltags EME text

    $default  reduce using rule 55 (text)

    alltags  go to state 72
    text     go to state 15


State 39

   16 alltags: alltags TT . alltags TTE text

    $default  reduce using rule 55 (text)

    alltags  go to state 73
    text     go to state 15


State 40

   17 alltags: alltags STRONG . alltags STRONGE text

    $default  reduce using rule 55 (text)

    alltags  go to state 74
    text     go to state 15


State 41

   18 alltags: alltags SMALL . alltags SMALLE text

    $default  reduce using rule 55 (text)

    alltags  go to state 75
    text     go to state 15


State 42

   19 alltags: alltags SUB . alltags SUBE text

    $default  reduce using rule 55 (text)

    alltags  go to state 76
    text     go to state 15


State 43

   20 alltags: alltags SUP . alltags SUPE text

    $default  reduce using rule 55 (text)

    alltags  go to state 77
    text     go to state 15


State 44

   46 table_tag: TABLE . table_data TABLEE

    $default  reduce using rule 49 (table_data)

    table_data  go to state 78


State 45

   27 alltags: alltags LI . alltags LIE text

    $default  reduce using rule 55 (text)

    alltags  go to state 79
    text     go to state 15


State 46

   28 alltags: alltags OL . alltags OLE text

    $default  reduce using rule 55 (text)

    alltags  go to state 80
    text     go to state 15


State 47

   41 img_tag: IMG . img_attr

    $default  reduce using rule 45 (img_attr)

    img_attr  go to state 81


State 48

   32 alltags: alltags FIGURE . alltags FIGUREE text

    $default  reduce using rule 55 (text)

    alltags  go to state 82
    text     go to state 15


State 49

   33 alltags: alltags FIGCAPTION . alltags FIGCAPTIONE text

    $default  reduce using rule 55 (text)

    alltags  go to state 83
    text     go to state 15


State 50

   22 alltags: alltags a_tag . text

    $default  reduce using rule 55 (text)

    text  go to state 84


State 51

   34 alltags: alltags img_tag . text

    $default  reduce using rule 55 (text)

    text  go to state 85


State 52

   35 alltags: alltags table_tag . text

    $default  reduce using rule 55 (text)

    text  go to state 86


State 53

    4 content_title: TITLE TEXT TITLEE .

    $default  reduce using rule 4 (content_title)


State 54

   37 a_tag: A a_attr . alltags AE
   38 a_attr: a_attr . HREF
   39       | a_attr . ATITLE

    HREF    shift, and go to state 87
    ATITLE  shift, and go to state 88

    $default  reduce using rule 55 (text)

    alltags  go to state 89
    text     go to state 15


State 55

   21 alltags: alltags FONT SIZE . alltags FONTE text

    $default  reduce using rule 55 (text)

    alltags  go to state 90
    text     go to state 15


State 56

    6 alltags: alltags . P alltags PE text
    7        | alltags . CENTER alltags CENTERE text
    7        | alltags CENTER alltags . CENTERE text
    8        | alltags . H1 alltags H1E text
    9        | alltags . H2 alltags H2E text
   10        | alltags . H3 alltags H3E text
   11        | alltags . H4 alltags H4E text
   12        | alltags . U alltags UE text
   13        | alltags . B alltags BE text
   14        | alltags . I alltags IE text
   15        | alltags . EM alltags EME text
   16        | alltags . TT alltags TTE text
   17        | alltags . STRONG alltags STRONGE text
   18        | alltags . SMALL alltags SMALLE text
   19        | alltags . SUB alltags SUBE text
   20        | alltags . SUP alltags SUPE text
   21        | alltags . FONT SIZE alltags FONTE text
   22        | alltags . a_tag text
   23        | alltags . BR text
   24        | alltags . BRS text
   25        | alltags . DIV alltags DIVE text
   26        | alltags . UL alltags ULE text
   27        | alltags . LI alltags LIE text
   28        | alltags . OL alltags OLE text
   29        | alltags . DL alltags DLE text
   30        | alltags . DT alltags DTE text
   31        | alltags . DD alltags DDE text
   32        | alltags . FIGURE alltags FIGUREE text
   33        | alltags . FIGCAPTION alltags FIGCAPTIONE text
   34        | alltags . img_tag text
   35        | alltags . table_tag text

    A           shift, and go to state 19
    FONT        shift, and go to state 21
    CENTER      shift, and go to state 22
    CENTERE     shift, and go to state 91
    BRS         shift, and go to state 23
    BR          shift, and go to state 24
    P           shift, and go to state 25
    H1          shift, and go to state 26
    H2          shift, and go to state 27
    H3          shift, and go to state 28
    H4          shift, and go to state 29
    UL          shift, and go to state 30
    DL          shift, and go to state 31
    DT          shift, and go to state 32
    DD          shift, and go to state 33
    DIV         shift, and go to state 34
    U           shift, and go to state 35
    B           shift, and go to state 36
    I           shift, and go to state 37
    EM          shift, and go to state 38
    TT          shift, and go to state 39
    STRONG      shift, and go to state 40
    SMALL       shift, and go to state 41
    SUB         shift, and go to state 42
    SUP         shift, and go to state 43
    TABLE       shift, and go to state 44
    LI          shift, and go to state 45
    OL          shift, and go to state 46
    IMG         shift, and go to state 47
    FIGURE      shift, and go to state 48
    FIGCAPTION  shift, and go to state 49

    a_tag      go to state 50
    img_tag    go to state 51
    table_tag  go to state 52


State 57

   24 alltags: alltags BRS text .
   53 text: text . TEXT
   54     | text . GREEK

    TEXT   shift, and go to state 10
    GREEK  shift, and go to state 11

    $default  reduce using rule 24 (alltags)


State 58

   23 alltags: alltags BR text .
   53 text: text . TEXT
   54     | text . GREEK

    TEXT   shift, and go to state 10
    GREEK  shift, and go to state 11

    $default  reduce using rule 23 (alltags)


State 59

    6 alltags: alltags . P alltags PE text
    6        | alltags P alltags . PE text
    7        | alltags . CENTER alltags CENTERE text
    8        | alltags . H1 alltags H1E text
    9        | alltags . H2 alltags H2E text
   10        | alltags . H3 alltags H3E text
   11        | alltags . H4 alltags H4E text
   12        | alltags . U alltags UE text
   13        | alltags . B alltags BE text
   14        | alltags . I alltags IE text
   15        | alltags . EM alltags EME text
   16        | alltags . TT alltags TTE text
   17        | alltags . STRONG alltags STRONGE text
   18        | alltags . SMALL alltags SMALLE text
   19        | alltags . SUB alltags SUBE text
   20        | alltags . SUP alltags SUPE text
   21        | alltags . FONT SIZE alltags FONTE text
   22        | alltags . a_tag text
   23        | alltags . BR text
   24        | alltags . BRS text
   25        | alltags . DIV alltags DIVE text
   26        | alltags . UL alltags ULE text
   27        | alltags . LI alltags LIE text
   28        | alltags . OL alltags OLE text
   29        | alltags . DL alltags DLE text
   30        | alltags . DT alltags DTE text
   31        | alltags . DD alltags DDE text
   32        | alltags . FIGURE alltags FIGUREE text
   33        | alltags . FIGCAPTION alltags FIGCAPTIONE text
   34        | alltags . img_tag text
   35        | alltags . table_tag text
